@@ -26,7 +26,7 @@
 module Rufus
 module Scheduler
 
-  VERSION = '2.0.5'
+  VERSION = '2.0.6'
 end
 end
 
