@@ -2,6 +2,11 @@
 = rufus-scheduler CHANGELOG.txt
 
 
+== rufus-scheduler - 2.0.6    not yet released
+
+- timeout jobs not outliving their parent job anymore, thanks Joel Wood
+
+
 == rufus-scheduler - 2.0.5    released 2010/03/02
 
 - fixed parse_time_string(s) issue, thanks Gonzalo Suarez
